--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,15 @@
 * {
     margin: 0;
     padding: 0;
+    outline: none;
 }
 
 
 
 .container {
     width: 1140px;
-    margin-left: 230px;
+    margin: 0 auto;
+
 }
 
 .header {
@@ -134,8 +136,7 @@
     float: left;
     margin-top: 290px;
     height: 93px;
-
-
+    font-family: "Lato";
 }
 
 .bannerTextTop {
@@ -149,6 +150,163 @@
     font-size: 32px;
     color: #222222;
 }
+
+
+.cards_sec {
+    margin-bottom: 96px;
+
+}
+
+.fetured {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    color: #222222;
+    text-align: center;
+    margin-top: 90px;
+}
+
+.feturedShop {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #9F9F9F;
+    text-align: center;
+    margin-top: 6px;
+
+}
+
+.card {
+    width: 360px;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.card:hover {
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
+}
+
+.card:hover .card-pic {
+    filter: brightness(30%);
+}
+
+.card-link {
+    display: block;
+    text-decoration: none;
+}
+
+.card-pic {
+    width: 100%;
+}
+
+.text-box {
+    padding: 20px;
+    background-color: #F8F8F8;
+    ;
+}
+
+.card-name {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    color: #000000;
+    margin-bottom: 13px;
+}
+
+.card-desc {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #5D5D5D;
+    margin-bottom: 18px;
+}
+
+.card-price {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F16D7F;
+}
+
+.add {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    padding: 13px;
+    border: 1px solid #FFFFFF;
+    pointer-events: all;
+}
+
+.add-box {
+    display: none;
+    position: absolute;
+    top: 188px;
+    justify-content: center;
+    width: 100%;
+    pointer-events: none;
+
+}
+
+.add-txt {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    margin-left: 11px;
+}
+
+.add:hover {
+    box-shadow: 0 0px 10px #FFFFFF;
+}
+
+.card:hover .add-box {
+    display: flex;
+}
+
+.card-flex {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 48px;
+}
+
+
+.browse_all-box {
+    display: flex;
+    justify-content: center;
+    margin-top: 18px;
+}
+
+.browse_all {
+    border: 1px solid #F26376;
+    background-color: #FFFFFF;
+    text-decoration: none;
+
+}
+
+.browse_all-txt {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #F26376;
+    padding: 14px 38px;
+}
+
+
+
+
+
+
 
 
 
@@ -173,7 +331,8 @@
     bottom: 105px;
     right: 125px;
     color: #F1E4E6;
-    height: 40px
+    height: 40px;
+    font-family: "Lato";
 }
 
 .textAccesories {
@@ -227,6 +386,7 @@
     font-size: 19.96px;
     line-height: 24px;
     color: #FBFBFB;
+    font-family: "Lato";
 }
 
 .textInfo {
@@ -234,6 +394,7 @@
     font-size: 13.972px;
     line-height: 17px;
     color: #FBFBFB;
+    font-family: "Lato";
 
 }
 
@@ -246,10 +407,14 @@
 
 
 
+
+
+
 .background_sea {
     background-image: url(img/sea.png);
-    height: 448px;
-    background-size: 100%
+    background-repeat: no-repeat;
+    padding-bottom: 126px;
+
 }
 
 .footer_flex {
@@ -273,6 +438,7 @@
     font-size: 20px;
     line-height: 24px;
     color: #222224;
+    font-family: "Lato";
 }
 
 .footer_top_right {
@@ -290,6 +456,7 @@
     font-size: 18px;
     line-height: 30px;
     color: #222224;
+    font-family: "Lato";
 
 }
 
@@ -297,9 +464,10 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 40px;
+    font-family: "Lato";
 }
 
-.button {
+.footer_button {
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
     border-style: none;
@@ -311,6 +479,7 @@
     align-items: center;
     color: #ffffff;
     padding: 21px;
+    font-family: "Lato";
 }
 
 .email {
@@ -319,11 +488,14 @@
     padding: 21px;
     background: #E1E1E1;
     border-style: none;
+
 }
 
 .footer_bottom {
     background-color: #222224;
-    height: 80px;
+    display: flex;
+    justify-content: space-between;
+
 }
 
 .rights {
@@ -332,4 +504,37 @@
     line-height: 19px;
     color: #FBFBFB;
     padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: "Lato";
+}
+
+.icons {
+    padding: 23px;
+    width: 160px;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.fa-brands {
+    padding: 8px;
+    background-color: #ffffff;
+    color: #000000;
+    ;
+}
+
+.fa-facebook-f {
+    padding-left: 11px;
+    padding-right: 11px;
+}
+
+.fa-pinterest-p {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.fa-instagram {
+    padding-left: 9px;
+    padding-right: 9px;
 }
