--- a/style.css
+++ b/style.css
@@ -825,4 +825,146 @@
 .fa-angle-down {
   color: #6F6E6E;
 }
+
+.carosel_woman {
+  height: 777px;
+  background-color: #F7F7F7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fa-angle-left {
+  color: #000000;
+  padding: 13px 17px;
+  font-size: 21px;
+  background-color: rgba(42, 42, 42, 0.15);
+}
+
+.fa-angle-right {
+  color: #000000;
+  padding: 13px 17px;
+  font-size: 21px;
+  background-color: rgba(42, 42, 42, 0.15);
+}
+
+.fa-angle-left:hover {
+  color: #F16D7F;
+}
+
+.fa-angle-right:hover {
+  color: #F16D7F;
+}
+
+.product_info {
+  border: 1px solid #EAEAEA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.women_col {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #F16D7F;
+  margin-top: 64px;
+}
+
+.pink_hr {
+  background-color: #EF5B70;
+  width: 63px;
+  height: 3px;
+  margin-top: 12px;
+  border: none;
+}
+
+.cheap {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 22px;
+  margin-top: 12px;
+  color: #4D4D4D;
+}
+
+.discribe {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #5E5E5E;
+  margin-top: 48px;
+}
+
+.price {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #EF5B70;
+  margin-top: 32px;
+}
+
+.grey_hr {
+  width: 641px;
+  border: 1px solid #EAEAEA;
+  margin-top: 65px;
+  margin-bottom: 65px;
+}
+
+.add_product_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 65px;
+}
+
+.add_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #F26376;
+  background-color: #FFFFFF;
+  text-decoration: none;
+  padding-top: 15px;
+  padding-left: 23px;
+  padding-right: 56px;
+  padding-bottom: 14px;
+}
+
+.product-txt {
+  font-family: "Lato";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #F16D7F;
+  padding-left: 23px;
+}
 /*# sourceMappingURL=style.css.map */
